--- a/OnlineTraining/src/main/resources/application.properties
+++ b/OnlineTraining/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+server.port=9083
+otms.app.jwtSecret=brsdb
+otms.app.jwtExpiration=100000
 
+spring.datasource.url =jdbc:mysql://localhost:3306/otmsdb
+spring.datasource.username =root
+spring.datasource.password =sql
+
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+
+#logger
+logging.level.org.springframework.web =ERROR
+logging.level.com.cg=DEBUG
+
+#logging.pattern.console= %d{"yyyy/MM/dd HH:mm:ss,SSS"} [%p] [%t] %M\\(%F:%L\\) - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+
+
+logging.file=application-debug.log
