--- a/OnlineTraining/src/main/resources/application.properties
+++ b/OnlineTraining/src/main/resources/application.properties
@@ -4,7 +4,7 @@ otms.app.jwtExpiration=100000
 
 spring.datasource.url =jdbc:mysql://localhost:3306/otmsdb
 spring.datasource.username =root
-spring.datasource.password =sql
+spring.datasource.password =tejaswini
 
 
 ## Hibernate Properties
